--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,28 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-		<dependency>
+		 <dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
+		</dependency> 
+		
+		<!--<dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
+        </dependency>-->
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+  			<artifactId>spring-context-support</artifactId>
 		</dependency>
+	<!--	<dependency>
+  			<groupId>org.quartz-scheduler</groupId>
+  			<artifactId>quartz</artifactId>
+  			<version>2.3.0</version>
+		</dependency>-->
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -52,15 +69,8 @@
   			<artifactId>metarParser</artifactId>
   			<version>1.4</version>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-quartz</artifactId>
-		</dependency>
-		<dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
-        </dependency>
+		
+		
 	</dependencies>
 
 	<build>
